RESOLVED FIXED108740
[chromium] Cannot click in any tab when WebHelperPlugin is in use on Chrome OS R26
https://bugs.webkit.org/show_bug.cgi?id=108740
Summary [chromium] Cannot click in any tab when WebHelperPlugin is in use on Chrome O...
David Dorwin
Reported 2013-02-01 19:36:00 PST
[chromium] Cannot click in any tab when WebHelperPlugin is in use on Chrome OS R26
Attachments
Patch (2.12 KB, patch)
2013-02-01 19:40 PST, David Dorwin
no flags
David Dorwin
Comment 1 2013-02-01 19:37:56 PST
To reproduce, do something that uses the WebHelperPlugin on Chrome OS R26. Until the WebHelperPlugin is destroyed, you will not be able to click anywhere. The mouse still moves, the keyboard still works, and clicking resumes when the WebHelperPlugin is closed. The problem is not that the hidden frame is in front of the main page. I verified this by making it visible and small. This is not a problem on Linux or R25. Removing the following call fixes the problem and does not affect the behavior of the WebHelperPlugin. m_widgetClient->show(WebNavigationPolicy());
David Dorwin
Comment 2 2013-02-01 19:40:06 PST
Kent Tamura
Comment 3 2013-02-03 15:44:59 PST
Comment on attachment 186206 [details] Patch ok
WebKit Review Bot
Comment 4 2013-02-03 20:05:46 PST
Comment on attachment 186206 [details] Patch Clearing flags on attachment: 186206 Committed r141731: <http://trac.webkit.org/changeset/141731>
WebKit Review Bot
Comment 5 2013-02-03 20:05:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.