[chromium] Do not call m_widgetClient->show() for WebHelperPlugin. https://bugs.webkit.org/show_bug.cgi?id=108740

Patch by David Dorwin <ddorwin@chromium.org> on 2013-02-03
Reviewed by Kent Tamura.

The calls to m_widgetClient->show() and setFocus() do not appear to be
necessary, and the former causes problems on at least on platform.

* src/WebHelperPluginImpl.cpp:
(WebKit::WebHelperPluginImpl::initialize): Removed calls to m_widgetClient->show() and setFocus().
(WebKit::WebHelperPluginImpl::setFocus): Should never be called.

Canonical link: https://commits.webkit.org/126993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141731 268f45cc-cd09-0410-ab3c-d52691b4dbfc